[gd_scene load_steps=18 format=3 uid="uid://mweljxrw4s5w"]

[ext_resource type="Script" uid="uid://8egh2tghq3v" path="res://Player/Swain/swain.gd" id="1_mm0hv"]
[ext_resource type="Texture2D" uid="uid://ckbfsn31reexu" path="res://Textures/Swain/swain_sprite.PNG" id="2_mm0hv"]
[ext_resource type="PackedScene" uid="uid://deuow7u07d07s" path="res://Utility/hurt_box.tscn" id="3_fwwdq"]
[ext_resource type="Texture2D" uid="uid://dwnigei8w2uiu" path="res://Textures/GUI/exp_background.png" id="4_0iruu"]
[ext_resource type="Texture2D" uid="uid://crhoac7q3wlta" path="res://Textures/GUI/exp_progress.png" id="5_e2m0f"]
[ext_resource type="FontFile" uid="uid://tp8b6lugjmo2" path="res://Font/tenderness.otf" id="6_mbo38"]
[ext_resource type="Texture2D" uid="uid://dhc8av7rhp4nt" path="res://Textures/GUI/healthbar.png" id="7_oirxd"]
[ext_resource type="Texture2D" uid="uid://ysiamaba3m21" path="res://Textures/GUI/health.png" id="8_fl02p"]
[ext_resource type="AudioStream" uid="uid://bj0sqtwe52d36" path="res://Audio/SoundEffect/levelup.ogg" id="9_u47qk"]
[ext_resource type="AudioStream" uid="uid://dfxrvixvuqfwl" path="res://Audio/SoundEffect/Victory.wav" id="10_cj54g"]
[ext_resource type="AudioStream" uid="uid://cwxcc606m1vwx" path="res://Audio/SoundEffect/Lose.ogg" id="11_gtiox"]
[ext_resource type="PackedScene" uid="uid://bkwk2jray1c1c" path="res://Utility/basic_button.tscn" id="12_iuxjr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ntmi"]
radius = 5.54694
height = 25.8553

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwnis"]
size = Vector2(13, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_btcbx"]
radius = 368.306

[sub_resource type="CircleShape2D" id="CircleShape2D_gwnis"]
radius = 43.0465

[sub_resource type="CircleShape2D" id="CircleShape2D_k53q1"]

[node name="Swain" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_mm0hv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_mm0hv")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2, 1)
scale = Vector2(1.05394, 0.818103)
shape = SubResource("CapsuleShape2D_4ntmi")

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_fwwdq")]
visible = false
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(3, 1)
shape = SubResource("RectangleShape2D_gwnis")

[node name="Attack" type="Node2D" parent="."]

[node name="UltDurationTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true

[node name="UltCooldownTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_btcbx")

[node name="GrabArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_gwnis")

[node name="CollectArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_k53q1")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_over = ExtResource("4_0iruu")
texture_progress = ExtResource("5_e2m0f")

[node name="lbl_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("6_mbo38")
theme_override_font_sizes/font_size = 16
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
offset_left = 304.0
offset_top = 200.0
offset_right = 336.0
offset_bottom = 208.0
value = 1.0
texture_over = ExtResource("7_oirxd")
texture_progress = ExtResource("8_fl02p")

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="lbl_LevelUp" type="Label" parent="GUILayer/GUI/LevelUp"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("6_mbo38")
text = "Level Up!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="snd_levelup" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("9_u47qk")
volume_db = -15.0

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 220.0
offset_top = -297.0
offset_right = 420.0
offset_bottom = -47.0

[node name="lbl_Result" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("6_mbo38")
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1

[node name="snd_victory" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("10_cj54g")
volume_db = -15.0

[node name="snd_lose" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("11_gtiox")
volume_db = -15.0

[node name="btn_menu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("12_iuxjr")]
layout_mode = 0
offset_left = 60.0
offset_top = 200.0
offset_right = 140.0
offset_bottom = 230.0
text = "Menu"

[node name="lblTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 280.0
offset_top = 20.0
offset_right = 360.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("6_mbo38")
theme_override_font_sizes/font_size = 20
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 208.0
offset_bottom = 40.0
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 56.0
columns = 10

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="click_end" from="GUILayer/GUI/DeathPanel/btn_menu" to="." method="_on_btn_menu_click_end"]

[editable path="HurtBox"]
